KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20051002a: Changes since 20050914a:
- Documentation: Revise FAQ (now in HTML and PDF formats), add information
  about copying the spool.
- Documentation: remove dontpost from manual page, no longer supported.
  (Users should use feedtype=none instead.) Found by Roi Dayan.
- Documentation: config.example now uses the .example TLD or 2nd level
  domain for all "server =" lines.

20050914a: Changes since 20050810a:
- Bugfix: Make -e actually work.
  SourceForge Bug #1248682, reported by Bodo Eggert.
- Logging: successful mail to moderator now logged at INFO priority,
  problems logged at ERROR priority (used to be DEBUG for both).
- Bugfix: let -e set (rather than toggle) stderr logging.
- Documentation: the filterfile(5) manual now mentions that the pattern=
  line follows the same quoting conventions as the main leafnode file.

20050810a: Changes since 20050514a:
- Bugfix: if getting the group returns "skip to next server", don't
  write a bogus article mark of 2^32-2 or 2^64-2 into the server's
  article mark file. Observed by Dietrich Schaffer.
- Bugfix: fetchnews now presents an error message to the user if the
  greeting banner code isn't 200 or 201. Reported by Werner Partner.

20050514a: Changes since 20050422a:
- Stability: If getting a non-text reply in response to ARTICLE, leave
  current server alone on the assumption we're out of synch and proceed
  to next.
- Bugfix: fetchnews now properly detects an empty upstream group.
  Reported by John Carlyle-Clarke.

20050422a: Changes since 20050412a:
- Bugfix: texpire can crash for some spool states (on incomplete
  groupinfo), reported by John Carlyle-Clarke.
- Documentation: new manual pages leafnode-version(1) and sendbatch(1),
  courtesy of Matěj Cepl of Debian.

20050412a: Changes since 20050324a:
- Feature: newsq -f will list the article bodies to be fetched in
  delaybody mode. Suggested by Cory C. Albrecht.